@@ -10,34 +10,19 @@
 data(bei)
 data(intensities)
 
-# partition the point pattern into quadrats, and select subsets 
+# partition the point pattern into 8 x 4 quadrats, and select subsets 
 # with high and low intensity
 
-allquads <- tiles(quadrats(bei, nx=8, ny=4))
-npts <- sapply(allquads, function(w) npoints(bei[w])) # replaced quadratcount
+beiquads <- twoquadsets(bei, nx = 8, ny = 4, minpoints = 30)
 
-enoughpoints <- npts > 30
-
-median_npts <- median(npts[enoughpoints])
-few  <- npts <= median_npts & enoughpoints
-many <- npts >= median_npts
-
-# subsets of high and low intensity, and unused quadrats
-
-quads1 <- allquads[many]
-quads2 <- allquads[few]
-quads0 <- allquads[!enoughpoints]
-
+# generate a plot of the quadrats
 # plot style for the two used subsets
 
-style1 <- list(col = "red",  light = .6)
-style2 <- list(col = "blue", light = .6)
+beistyle <- list(hi = style(col="red",  alpha=.4, col.win="red", alpha.win=.4),
+                 lo = style(col="blue", alpha=.4, col.win="blue"))
 
-# a plot of the subsamples
-
-quadratsplot(bei, quads1, quads2, style1, style2, 
-             quads0 = quads0, pch=16, cex=.3)
-
+quadratsplot(bei, beiquads, beistyle, pch = 16, cex = .4, 
+  main = "Beilschmiedia quadrats for testing")
 
 # testing reweighted second-order stationarity ----------------------------
 
@@ -51,48 +36,46 @@ nperm <- 1000
 
 # tagging the beilschmiedia data set as reweighted, with Bayesian intensity estimate
 
-bei.wbay <- reweighted(bei,  lambda=bei.intens.bayes)
+bei.wbay <- reweighted(bei, intensity = bei.intens.bayes)
 
-Kpermute.test(bei.wbay, quads1 = quads1, quads2 = quads2, rmax = 25, 
-              use.tbar=TRUE, nperm = nperm)
+testresult.wbay <- sos.test(bei.wbay, beiquads, rmax = 25, use.tbar=TRUE, nperm = nperm)
+
+testresult.wbay
 
 #plot Figure 17, left
 
-plot(estOnQuadrats(bei.wbay, fun = estK, quads = quads1, rmax = 25), 
-     style = style1, ylim = c(0, 3000))
-plot(estOnQuadrats(bei.wbay, fun = estK, quads = quads2, rmax = 25), 
-     style = style2, add = T)
+plot(testresult.wbay, beistyle, ylim = c(0,3000))
 
 
 # using the maximum likelihood intensity estimate
 
 # tagging the beilschmiedia data set as reweighted, with Bayesian intensity estimate
 
-bei.wml <- reweighted(bei, lambda=bei.intens.maxlik)
+bei.wml <- reweighted(bei, intensity = bei.intens.maxlik)
 
-Kpermute.test(bei.wml, quads1 = quads1, quads2 = quads2, rmax = 25, 
-              use.tbar=TRUE, nperm = nperm)
+testresult.wml <- sos.test(bei.wml, beiquads, rmax = 25, use.tbar=TRUE, nperm = nperm)
+
+testresult.wml
 
 #plot Figure 17, right
 
-plot(estOnQuadrats(bei.wml, fun = estK, quads = quads1, rmax = 25), 
-     style = style1, ylim = c(0, 3000))
-plot(estOnQuadrats(bei.wml, fun = estK, quads = quads2, rmax = 25), 
-     style = style2, add = T)
+plot(testresult.wml, beistyle, ylim = c(0,3000))
 
 ####### same, with nonparametric intensity estimate, 
 
-Kpermute.test(reweighted(bei, lambda = bei.intens.nonpar),
-              quads1 = quads1, quads2 = quads2, rmax = 25, 
+sos.test(reweighted(bei, intensity = bei.intens.nonpar),
+              beiquads, rmax = 25, 
               use.tbar=TRUE, nperm = nperm)
 
 ####### same, with parameter normpower = 2
 
-Kpermute.test(bei.wbay, quads1 = quads1, quads2 = quads2, rmax = 25, 
-              normpower = 2,  
+sos.test(bei.wml, beiquads, rmax = 25, normpower = 2,
               use.tbar=TRUE, nperm = nperm)
 
-Kpermute.test(bei.wml, quads1 = quads1, quads2 = quads2, rmax = 25, 
-              normpower = 2,  
+sos.test(bei.wbay, beiquads, rmax = 25, normpower = 2,
+              use.tbar=TRUE, nperm = nperm)
+
+sos.test(reweighted(bei, intensity = bei.intens.nonpar),
+              beiquads, rmax = 25, normpower = 2,
               use.tbar=TRUE, nperm = nperm)
 
